--- a/ChatWave/Profile/templates/profile.html
+++ b/ChatWave/Profile/templates/profile.html
@@ -247,7 +247,7 @@
                     padding: 10px 20px;
                 }
             }
-        }
+        
     </style>
 </head>
 <body>
@@ -300,7 +300,7 @@
         <div class="profile-sections">
             <div class="section-card">
                 <div class="section-header">
-                    <h2 class="section-title">Liked Songs</h2>
+                    <h2 class="section-title">{{userinfo.username}}'s Playlists</h2>
                 </div>
                 
                 <div class="playlist-grid">
